src/objects/Race__c.object
<CustomObject>
    <fields>
        <fullName>FastestLapBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fastest Lap By</label>
        <referenceTo>Driver__c</referenceTo>
        <relationshipLabel>Races</relationshipLabel>
        <relationshipName>FastestLaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PollPositionLapTime__c</fullName>
        <label>Poll Position Lap Time</label>
        <summarizedField>Contestant__c.Qualification1LapTime__c</summarizedField>
        <summaryForeignKey>Contestant__c.Race__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <referenceTo>Season__c</referenceTo>
        <relationshipLabel>Races</relationshipLabel>
        <relationshipName>Races</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Flagged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalDNFs__c</fullName>
        <label>Total DNFs</label>
        <summaryFilterItems>
            <field>Contestant__c.DNF__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Contestant__c.Race__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>Season__r.Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Race</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Race Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Races</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>